feat(chat): 添加聊天请求参数和数据库字段支持
- 在ChatRequest中添加contextId、clientLocale、retrievalKb、customerSystemPrompt和systemPrompt字段
- 添加Locale和SystemPrompt枚举类型定义
- 修改ChatService中的RAG检索逻辑，支持条件检索
- 在EmbeddingsItemPo中添加createUserId字段及其相关方法
- 在FilePo中将id字段类型从String改为Integer，移除isStaticFile字段并添加createUserId字段
- 更新相关Mapper XML文件以支持新增和修改的数据库字段
- 修改FileController中文件ID参数类型为Integer
- 添加中文和英文常量定义支持